--- a/ListGenerator.Server/ListGenerator/Server/appsettings.json
+++ b/ListGenerator.Server/ListGenerator/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EFGPD5V\\SQLEXPRESS;Database=ListGeneratorContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-HCHKBF5\\SQLEXPRESS;Database=ListGeneratorContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
